<resources>
    <string name="app_name">ListSpesaAndroid</string>
    <string name="loginTitle">FaiSpesa</string>
    <string name="emailPlaceholder">Email</string>
    <string name="passwordPlaceholder">Password</string>
    <string name="loginButtonText">ACCEDI</string>
    <string name="loginOrText">oppure</string>
    <string name="loginRegisterText">Crea un account</string>

    <string name="nome_cognome">Nome e Cognome</string>
    <string name="email">Email</string>
    <string name="password">Password</string>
    <string name="registrati">Registrati</string>
    <string name="accountTrue">Hai già un account</string>
    <string name="accedi_ora"><u>Accedi ora</u></string>
    <string name="crea_account">Crea un Account</string>
    <string name="intro_user">Modifica le impostazioni di base del tuo account</string>
    <string name="nome_utente">Nome utente</string>


    <string name="button_tutorial_skip">Skip</string>
    <string name="button_tutorial_next">Next</string>
    <string name="text_tutorial_first_1">Crea e organizza le tue lista</string>
    <string name="text_tutorial_first_2">Le tue liste della spesa saranno sempre a disposizione! Organizzale in base alle tue esigenze!</string>
    <string name="text_tutorial_second_1">Inserisci gli articoli</string>
    <string name="text_tutorial_second_2">Aggiorna la tua lista con gli articoli che vuoi acquistare</string>
    <string name="text_tutorial_third_1">Fai la spesa</string>
    <string name="text_tutorial_third_2">Fai la spesa e aggiorna la tua lista</string>

    <string name="alert_remove_list">Elimina Lista</string>
    <string name="alert_confim">Conferma</string>
    <string name="alert_undo">Annulla</string>
    <string name="nascondi_completati_dettaglio">Nascondi Completati</string>

    <string name="add_name_list">Nome della lista</string>
    <string name="add_name_product">Aggiungi prodotto</string>
    <string name="add_desc_list">Descrizione</string>
    <string name="logout">Logout</string>

</resources>
