<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical">

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/loginTitleMargin"
        android:text="@string/loginTitle"
        android:textAlignment="center"
        android:textColor="@color/fontColor"
        android:textSize="@dimen/loginTitleSize" />

    <EditText
        android:id="@+id/loginEmail"
        android:layout_width="200dp"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:layout_marginTop="@dimen/loginEmailMargin"
        android:hint="@string/emailPlaceholder"
        android:textColor="@color/fontColor"
        android:textColorHint="@color/fontColor" />

    <EditText
        android:id="@+id/loginPassword"
        android:layout_width="200dp"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:layout_marginTop="@dimen/loginPasswordMargin"
        android:hint="@string/passwordPlaceholder"
        android:inputType="textPassword"
        android:textColor="@color/fontColor"
        android:textColorHint="@color/fontColor" />


    <Button
        android:id="@+id/loginButton"
        android:layout_width="@dimen/loginButtonWidth"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:layout_marginTop="@dimen/loginButtonMargin"
        android:background="@color/lightBlue"
        android:text="@string/loginButtonText"
        android:textColor="@color/white" />

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/loginOrMargin"
        android:text="@string/loginOrText"
        android:textAlignment="center" />

    <TextView
        android:id="@+id/createAccount"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/loginRegisterMargin"
        android:text="@string/loginRegisterText"
        android:textAlignment="center"
        android:textColor="@color/lightBlue"
        android:textSize="@dimen/loginRegisterTextSize" />
</LinearLayout>
