<?xml version="1.0" encoding="utf-8"?>
<android.support.v4.widget.NestedScrollView
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent">
<LinearLayout

    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:gravity="center">

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        style="@style/regitrati_title"/>

    <ImageView
        android:id="@+id/img_profilo"
        android:layout_width="@dimen/registrati_img_profilo"
        android:layout_height="@dimen/registrati_img_profilo"
        android:layout_margin="15dp"
        android:background="@color/font"
        />

    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="vertical">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/nome_cognome"
            style="@style/font_form"/>
        <EditText
            android:id="@+id/username"
            android:layout_height="wrap_content"
            android:layout_width="@dimen/registrati_input_250"
            android:inputType="text"/>

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/email"
            style="@style/font_form"/>
        <EditText
            android:id="@+id/email"
            android:layout_height="wrap_content"
            android:layout_width="@dimen/registrati_input_250"
            android:inputType="text"/>

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/password"
            style="@style/font_form"/>
        <EditText
            android:id="@+id/password"
            android:layout_height="wrap_content"
            android:layout_width="@dimen/registrati_input_250"
            android:inputType="text"/>
        <Button
            android:id="@+id/registrati_toDB"
            android:layout_width="@dimen/registrati_input_250"
            android:layout_height="wrap_content"
            android:text="@string/registrati"
            android:backgroundTint="@color/bottone"
            android:textColor="@color/white"/>

    </LinearLayout>

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/accountTrue"
        style="@style/font_form"
        android:textSize="14dp"/>
    <Button

        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:background="@null"
        android:text="@string/accedi_ora"
        style="@style/font_button_accedi"
        android:textAllCaps="false"
        />

</LinearLayout>
</android.support.v4.widget.NestedScrollView>