<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:orientation="vertical"
    android:layout_gravity="center_vertical">


        <TextView
            android:id="@+id/welcomeUser"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="Benvenuto User"
            android:textSize="@dimen/registrati_fontsize"
            android:layout_gravity="center"/>
        <TextView
            android:id="@+id/introUser"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/intro_user"
            android:layout_gravity="center"/>
    <View
        android:layout_width="match_parent"
        android:layout_height="1dp"
        android:background="@color/registrazione_color"/>
    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:layout_gravity="center"
        android:gravity="center"
        android:layout_marginTop="10dp">

        <ImageView
            android:id="@+id/img_profile_home"
            android:layout_width="@dimen/img_profilo"
            android:layout_height="@dimen/img_profilo"
            android:layout_margin="15dp"
            android:background="@color/font"/>

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/nome_utente"
            android:layout_margin="10dp"/>
        <TextView
            android:id="@+id/username_profile"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="Username Profile"
            style="@style/font_profile"/>

        <View
            android:layout_width="match_parent"
            android:layout_height="1dp"
            android:background="@color/registrazione_color"/>

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/email"
            android:layout_margin="10dp"/>
        <TextView
            android:id="@+id/email_profile"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="mario.rossi@gmail.com"
            style="@style/font_profile"/>


    </LinearLayout>

</LinearLayout>